# hifreq-tradingame

./: .gitignore  pyproject.toml  readme.md
docs/: design-spec.md  e2e-quick-start.md  e2e-testing-guide.md
src/: app.py
src/account/: account.py  account_projection.py  trading_analysis.py
src/api/: rest.py  schemas.py  websocket.py
src/auth/: __init__.py  auth_service.py  user_model.py
src/common/: circuit_breaker.py  clock.py  enums.py  errors.py  models.py  operation_log.py  topics.py  types.py
src/events/: __init__.py  account_events.py  base_event.py  market_events.py  order_events.py  trade_events.py
src/frontend/: __init__.py
src/market_data/: __init__.py  market_data_service.py  twse_adapter.py
src/matching_engine/: matcher.py  order_book.py  price_time_priority.py
src/oms/: oms_service.py  order.py  order_repository.py  order_state_machine.py
src/storage/: event_loader.py  event_writer.py  excel_writer.py  google_sheets_adapter.py  report_writer.py  snapshot.py  user_record_writer.py
tests/e2e/: README.md  SETUP_SUMMARY.md  __init__.py  conftest.py  helpers.py  playwright_config.py  test_login_flow.py  test_template.py  test_trading_flow.py
tests/integration/: test_cancel_flow.py  test_order_to_trade_flow.py
tests/replay/: sample_event_log.jsonl  test_replay_deterministic.py
tests/unit/: test_account_projection.py  test_canonical_events.py  test_canonical_models.py  test_cold_start_recovery.py  test_constraint_audit2.py  test_constraint_gaps.py  test_events.py  test_matching_engine.py  test_module3_gaps.py  test_module4_gaps.py  (+4 more)
(+8 files in other folders)
