[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "trading-sim"
version = "1.0.0"
description = "簡易證券交易下單與撮合模擬遊戲 – Event-Driven Modular Monolith"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "openpyxl>=3.1",
    "pydantic>=2.7",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-playwright>=0.4.0",
    "playwright>=1.40",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
